5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1800_2573.log
== TEST (2019-06-11 01:13:58) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=p[i]/(a[i]*a[i])
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 01:14:00) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=p[i]/(a[i]*a[i])
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 01:36:53) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2)
print(x)
print("O MAIOR IMC DA TURMA EH"max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print
-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 01:36:54) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2)
print(x)
print("O MAIOR IMC DA TURMA EH"max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39.99):
		print("OBESIDADE SEVERA")
		elif(max(x)>40):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:49:50) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2)
print(x)
print("O MAIOR IMC DA TURMA EH"max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:50:39) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2)
	print(x)
print("O MAIOR IMC DA TURMA EH"max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- EXECUTION TIME:
0.869796
-- ERROR:
  File "/home/codebench/codes/1800/2573/main.py", line 7
    print(x)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:50:43) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2)
	print(x)
	print("O MAIOR IMC DA TURMA EH"max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:50:46) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2)
	print(x)
	print("O MAIOR IMC DA TURMA EH"max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:07:55) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2)
	print(x)
	print("O MAIOR IMC DA TURMA EH"max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:08:04) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2)
print(x)
print("O MAIOR IMC DA TURMA EH"max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:09:05) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2)
	
print(x)
print("O MAIOR IMC DA TURMA EH"max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
File "XXXX", line 8
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:09:46) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2))
	
print(x)
print("O MAIOR IMC DA TURMA EH"max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
File "XXXX", line 9
    print("O MAIOR IMC DA TURMA EH"max(x))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:10:27) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2))
	
print(x)
print("O MAIOR IMC DA TURMA EH: "+ max(x))
for i in range(size(x)):
	if(max(x)<17)
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
File "XXXX", line 11
    if(max(x)<17)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:10:50) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2))
	
print(x)
print("O MAIOR IMC DA TURMA EH: "+ max(x))
for i in range(size(x)):
	if(max(x)<17):
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:14:13) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2))
	
print(x)
print("O MAIOR IMC DA TURMA EH: ", max(x))
for i in range(size(x)):
	if(max(x)<17):
		print("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		print("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		print("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		print("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		print("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		print("OBESIDADE MORBIDA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:16:34) 
-- CODE:
from numpy import*
p=array(eval(input("peso: ")))
a=array(eval(input("altura: ")))
x=zeros(size(p))
for i in range(size(p)):
	x[i]=(round(p[i]/(a[i]*a[i]),2))
	
print(x)
print("O MAIOR IMC DA TURMA EH: ", max(x))
for i in range(size(x)):
	if(max(x)<17):
		mensagem=("MUITO ABAIXO DO PESO")
	elif(max(x)>17 and max(x)<18.49):
		mensagem=("ABAIXO DO PESO")
	elif(max(x)>18.5 and max(x)<24.99):
		mensagem=("PESO NORMAL")
	elif(max(x)>25 and max(x)<29.99):
		mensagem=("ACIMA DO PESO")
	elif(max(x)>30 and max(x)<34.99):
		mensagem=("OBESIDADE")
	elif(max(x)>35 and max(x)<39,99):
		mensagem=("OBESIDADE SEVERA")
	elif(max(x)>35 and max(x)<39,99):
		mensagem=("OBESIDADE MORBIDA")
print(mensagem)
	
-- EXECUTION TIME:
0.947128
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
